# speciome

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_user.txt  README.md  job.sh  main.cpp  speciome.pri  speciome.pro  speciome_test.pro  vcpkg.json
ci/: do_oclint
docs/: ARCHITECTURE.md  BUILD.md  CMAKE.md  GENOMES.md  PARAMETERS.md  VARIABLES.md
src/: CMakeLists.txt  Collector.cpp  Collector.h  Collector.hpp  Freezer.cpp  Freezer.h  Freezer.hpp  GenArch.cpp  GenArch.h  GenArch.hpp  Individual.cpp  Individual.h  Individual.hpp  MetaPop.cpp  MetaPop.h  MetaPop.hpp  Network.cpp  Network.h  Network.hpp  Param.cpp  Param.h  Param.hpp  Printer.cpp  Printer.h  Printer.hpp  Random.cpp  Random.h  Random.hpp  Simul.cpp  Simul.h  Simul.hpp  TestUtilities.cpp  TestUtilities.hpp  Utilities.cpp  Utilities.h  Utilities.hpp
tests/: CMakeLists.txt  CollectorTests.cpp  GenArchTests.cpp  IndividualTests.cpp  MetaPopTests.cpp  OutputTests.cpp  SimulTests.cpp  TestUtilities.cpp  TestUtilities.h
